--- a/Nybble/Nybble.csproj
+++ b/Nybble/Nybble.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Nybble.Iconvertible.cs" />
     <Compile Include="NybbleDemo.cs" />
     <Compile Include="Nybble.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
